End of day commit

--- a/src/locales/nl/translation.json
+++ b/src/locales/nl/translation.json
@@ -345,21 +345,24 @@
     "profile_check_failed": "Er ging iets mis bij het controleren van je profiel. Probeer het later opnieuw of neem gerust contact op met ons supportteam.",
     "resend_verification": "Verificatie-e-mail opnieuw verzenden",
     "social_login_failed": "Er is iets misgegaan bij het aanmelden met Google. Probeer het opnieuw of registreer via e-mail.",
-    "succes": "Succes! Controleer uw e-mail voor de verificatielink!",
     "verify_error": {
-      "ALREADY_REGISTERED": "Je bent al geregistreerd, maar nog niet geverifieerd. Controleer je e-mail.",
+      "ALREADY_REGISTERED": "Je bent al geregistreerd, maar nog niet geverifieerd. We hebben je eerder een verificatiemail gestuurd. Klik op de link in die e-mail om verder te gaan",
       "AUTH_CHECK_FAILED": "Er ging iets mis bij het controleren van je account.",
       "EMAIL_DUPLICATE": "Dit e-mailadres bestaat al (in Supabase Auth). Je bent al geregistreerd.",
       "EMAIL_INVALID": "Dit e-mailadres is ongeldig of niet leverbaar.",
-      "EMAIL_SEND": "We hebben je een e-mail gestuurd! Controleer je inbox om verder te gaan.",
+      "EMAIL_SEND": "We hebben je een e-mail gestuurd! Controleer je inbox om je te verifiëren.",
+      "EMAIL_SEND_AGAIN": "Je was al geregistreerd, maar je vorige link is vervallen. We hebben je een nieuwe verificatiemail gestuurd. Controleer je inbox.",
       "EMAIL_SEND_FAILED": "Er ging iets mis bij het verzenden van de verificatie-e-mail. Probeer het later nog eens.",
+      "EMAIL_SEND_FAILED_AGAIN": "De verificatie-e-mail kon finaal niet worden verzonden.",
       "INSERT_FAILED": "Fout bij opslaan van je registratie. Probeer opnieuw.",
+      "INTERNAL_EXCEPTION": "Er is iets misgegaan aan onze kant. Probeer het later opnieuw.",
       "INVALID_USER_RECORD": "Er is een probleem met je registratie. Gelieve opnieuw te registreren.",
       "KICKBOX_FAILED": "Fout bij het controleren van je e-mailadres. Probeer later opnieuw.",
       "METHOD_NOT_ALLOWED": "Deze actie is niet toegestaan.",
       "MISSING_FIELDS": "E-mailadres of beveiligingscontrole ontbreekt.",
       "RATE_LIMIT": "Je hebt te vaak geprobeerd. Wacht even voordat je het opnieuw probeert.",
-      "TURNSTILE_FAILED": "De beveiligingscontrole is mislukt. Probeer opnieuw.",
+      "TEMP_USER_LOOKUP_FAILED": "Er ging iets mis bij het ophalen van je registratiegegevens. Probeer het later opnieuw of neem contact op met ons supportteam.",
+      "TURNSTILE_FAILED": "De yarn-developbeveiligingscontrole is mislukt. Probeer opnieuw.",
       "UNKNOWN_ERROR": "Er is een onbekende fout opgetreden. Probeer opnieuw of contacteer ons supportteam."
     }
   },
