End of day commit

--- a/src/locales/nl/translation.json
+++ b/src/locales/nl/translation.json
@@ -326,7 +326,7 @@
   "register": {
     "seo_title": "Gratis proberen bij CRstudio",
     "seo_description": "Gratis CRstudio proberen voor een maand.",
-    "page_description": "Pagina om je gratis te registreren bij CRstudio",
+    "page_description": "Pagina om je gratis te registreren bij CRstudio.",
     "account_exists_subdomain": "Je hebt al een kunstenaarssite.",
     "account_exists_no_subdomain": "Je hebt al een account, maar moet je profiel nog afronden.",
     "button_busy": "Registeren ...",
