chore: auto-fix lint errors

--- a/src/locales/nl/translation.json
+++ b/src/locales/nl/translation.json
@@ -502,7 +502,7 @@
     "feature_1": "Een krachtige, eenvoudige en veilige tool om mijn volledig oeuvre te tonen aan verzamelaars, galeriehouders, curatoren en kunsthistorici.",
     "feature_2": "Eindelijk kan ik het werk van mijn grootvader goedkoop bewaren en bewaken voor toekomstige generaties",
     "feature_3": "Een uiterst efficiënte manier om de artistieke nalatenschap van een kunstenaar te documenteren en te archiveren.",
-    "feature_4": "Een zeer professioneel instrument dat de reputatie, waarde en erkenning van een kunstenaar verhoogt.",
+    "feature_4": "Een onmisbaar instrument dat de reputatie, waarde en erkenning van een kunstenaar verhoogt.",
     "client_1": "Paul, kunstenaar",
     "client_2": "Emma, erfgename van een beeldhouwer",
     "client_3": "Jean, kunstarchivaris",
