--- a/src/locales/nl/translation.json
+++ b/src/locales/nl/translation.json
@@ -158,7 +158,7 @@
 
   "overview": {
     "title": "Jouw catalogue raisonné.\nAltijd online. Voor iedereen.",
-    "description": "Publiceer eenvoudig en betaalbaar\nZonder zorgen over techniek\nIn 3 talen, gekozen uit 30 talen\nIn jouw layout, jouw stijl\nAan te vullen à volonté"
+    "description": "Test. Publiceer eenvoudig en betaalbaar\nZonder zorgen over techniek\nIn 3 talen, gekozen uit 30 talen\nIn jouw layout, jouw stijl\nAan te vullen à volonté"
   },
 
   "pricing": {
